--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ fastlane/test_output
 iOSInjectionProject/
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,macos
+Racing Line.xcodeproj/project.xcworkspace/xcuserdata/nijamatashvili.xcuserdatad/UserInterfaceState.xcuserstate
